--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,78 @@ nav > ul {
     border: 3px solid #E5E7EB;
 }
 
+.showcase {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 2rem;
+    font-size: 18px;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    padding: 1rem 20% 5rem 20%;
+}
+
 button {
     background-color: #3882F6;
     border: none;
     color:white;
     padding: 0.5rem 1.2rem;
     border-radius: 0.5rem;
+}
+
+.showcase {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    font-size: 18px;
+    color: #E5E7EB;
+    background-color: #FFF;
+    padding: 1rem 23% 5rem 23%;
+}
+
+.showcase > h2 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.showcase-box {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    text-align: center;
+}
+
+.showcase-item {
+    color: #000;
+}
+
+.showcase-img {
+    border: 3px solid #3882F6;
+    border-radius: 0.5rem;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    padding: 5rem 0;
+}
+
+.quote-box {
+    width: 50%;
+}
+
+.quote-author {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 2rem;
+    padding-top: 1rem;
 }
