--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,18 @@ body {
     font-family: 'Roboto', serif;
 }
 
+button {
+    background-color: #3882F6;
+    border: none;
+    color:white;
+    height: 35px;
+    padding: 0 30px;
+    border-radius: 5px;
+}
+
 .break {
     flex-basis: 100%;
-    height: 0px;
+    height: 0;
 }
 
 .container {
@@ -106,14 +115,6 @@ nav > ul {
     padding: 1rem 20% 5rem 20%;
 }
 
-button {
-    background-color: #3882F6;
-    border: none;
-    color:white;
-    padding: 0.5rem 1.2rem;
-    border-radius: 0.5rem;
-}
-
 .showcase {
     display: flex;
     justify-content: center;
@@ -169,4 +170,24 @@ button {
     text-align: right;
     padding-right: 2rem;
     padding-top: 1rem;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.call-to-action-box {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px;
+    width: 60%;
+    margin: 5rem 0;
+    background-color: #3882F6;
+    padding: 3rem 5rem;
+}
+
+.call-to-action button {
+    border: #FFF solid 1px;
 }
