--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,27 @@ button {
     border-radius: 5px;
 }
 
+nav > ul {
+    display: flex;
+    font-size: 18px;
+
+    li {
+        margin-left: 1.5rem;
+    }
+
+    a {
+        color: #E5E7EB;
+        text-decoration: none;
+    }
+}
+
+footer {
+    color: #E5E7EB;
+    padding: 2.5rem;
+    background-color: #1F2937;
+    text-align: center;
+}
+
 .break {
     flex-basis: 100%;
     height: 0;
@@ -71,20 +92,6 @@ button {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
-}
-
-nav > ul {
-    display: flex;
-    font-size: 18px;
-
-    li {
-        margin-left: 1.5rem;
-    }
-
-    a {
-        color: #E5E7EB;
-        text-decoration: none;
-    }
 }
 
 .header-box {
